# clapper-enhancers

./: README.md  meson.build  meson_options.txt
.github/workflows/: flatpak.yml  versioning.yml
.obs/: workflows.yml
pkgs/flatpak/: .gitignore  com.github.rafostar.Clapper.Enhancers.json
src/: gen-schemas.c  gen-version.py  meson.build
src/control-hub/: clapper-control-hub-actions.c  clapper-control-hub-actions.h  clapper-control-hub-json.c  clapper-control-hub-json.h  clapper-control-hub-mdns.c  clapper-control-hub-mdns.h  clapper-control-hub-ws.c  clapper-control-hub-ws.h  clapper-control-hub.c  clapper-control-hub.h  clapper-control-hub.plugin.in  meson.build
src/lbry/: clapper-lbry.c  clapper-lbry.plugin  clapper-lbry.plugin.in  meson.build
src/media-scanner/: clapper-media-scanner.c  clapper-media-scanner.plugin.in  meson.build
src/mpris/: clapper-mpris.c  clapper-mpris.plugin.in  meson.build
src/parser-m3u/: clapper-parser-m3u.c  clapper-parser-m3u.plugin.in  meson.build
src/peertube/: clapper-peertube.c  clapper-peertube.plugin  clapper-peertube.plugin.in  meson.build
src/recall/: clapper-recall.c  clapper-recall.plugin.in  meson.build
src/utils/c/: meson.build
src/utils/c/common/: common-utils.c  common-utils.h  meson.build
src/utils/c/json/: json-utils.c  json-utils.h  meson.build
src/utils/python/: dash_utils.py  hls_utils.py
src/yt-dlp/: clapper_yt_dlp.plugin  clapper_yt_dlp.plugin.in  clapper_yt_dlp.py  clapper_yt_dlp_dash.py  clapper_yt_dlp_debug.py  clapper_yt_dlp_direct.py  clapper_yt_dlp_hls.py  clapper_yt_dlp_overrides.py  clapper_yt_dlp_playlist.py  clapper_yt_dlp_utils.py  meson.build
