# Build
option('enhancersdir',
  type : 'string',
  value : '',
  description : 'Set custom enhancers install directory'
)

# Enhancers
option('lbry',
  type: 'feature',
  value: 'auto',
  description: 'Clapper Enhancer LBRY'
)
option('mpris',
  type: 'feature',
  value: 'auto',
  description: 'Clapper Enhancer MPRIS'
)
option('peertube',
  type: 'feature',
  value: 'auto',
  description: 'Clapper Enhancer PeerTube'
)
option('recall',
  type: 'feature',
  value: 'auto',
  description: 'Clapper Enhancer Recall'
)
option('yt-dlp',
  type: 'feature',
  value: 'auto',
  description: 'Clapper Enhancer yt-dlp'
)
