# Build
option('enhancersdir',
  type: 'string',
  value: '',
  description: 'Set custom enhancers install directory'
)
option('enhancersver',
  type: 'string',
  value: '',
  description: 'Set custom enhancers version string'
)

# Enhancers
option('lbry',
  type: 'feature',
  value: 'auto',
  description: 'Clapper Enhancer LBRY'
)
option('media-scanner',
  type: 'feature',
  value: 'auto',
  description: 'Clapper Enhancer Media Scanner'
)
option('mpris',
  type: 'feature',
  value: 'auto',
  description: 'Clapper Enhancer MPRIS'
)
option('parser-m3u',
  type: 'feature',
  value: 'auto',
  description: 'Clapper Enhancer Parser M3U'
)
option('peertube',
  type: 'feature',
  value: 'auto',
  description: 'Clapper Enhancer PeerTube'
)
option('recall',
  type: 'feature',
  value: 'auto',
  description: 'Clapper Enhancer Recall'
)
option('yt-dlp',
  type: 'feature',
  value: 'auto',
  description: 'Clapper Enhancer yt-dlp'
)
