enhancer_data = [
  'clapper_yt_dlp.plugin',
  'clapper_yt_dlp.py',
  'clapper_yt_dlp_overrides.py',
  'clapper_yt_dlp_direct.py',
  '../utils/python/dash_utils.py',
  '../utils/python/hls_utils.py',
]

install_data(
  enhancer_data,
  install_dir: join_paths(clapper_enhancers_dir, name),
)
clapper_available_enhancers += name
